crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.todo-repro-missed-memoization-from-capture-in-invoked-function-inferred-as-mutation/error.txt
Found 1 error:

Compilation Skipped: Existing memoization could not be preserved

React Compiler has skipped optimizing this component because the existing manual memoization could not be preserved. This value was memoized in source but not in compilation output.

  16 |   // We infer that getIsEnabled returns a mutable value, such that
  17 |   // isEnabled is mutable
> 18 |   const isEnabled = useMemo(() => getIsEnabled(), [getIsEnabled]);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Could not preserve existing memoization
  19 |
  20 |   // We then infer getLoggingData as capturing that mutable value,
  21 |   // so any calls to this function are then inferred as extending
